2008-05-26  Mark Wielaard  <mwielaard@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Add
	patches/icedtea-override-redirect-metacity.patch.
	* Makefile.in: Regenerate.
	* patches/icedtea-override-redirect-metacity.patch: New patch.

2008-05-25  Mark Wielaard  <mark@klomp.org>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound:
	Import Gervill fixes from CVS. See CHANGES.txt.
	Added: Software Mixing Mixer.
	Fix: AudioFloatFormatConverter.getTargetFormats()
	* overlays/openjdk/jdk/test/com/sun/media/sound: Imported all tests.

2008-05-25  Mark Wielaard  <mark@klomp.org>

	* Makefile.am: Use -source 1.5 whenever possible.
	* Makefile.in: Regenerated.
	* javac.in: Use -1.5.

2008-05-23  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Updated jtreg to use correct javac and jar.
	* Makefile.in: Regenerated.

2008-05-22  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed conditions for using JAVAC.
	* Makefile.in: Regenerated.

2008-05-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed typo.
	* Makefile.in: Regenerated.
	* generated/sun/awt/X11/generator/sizer.32: Regenerated.

2008-05-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Updated JAVAC calls so ecj wrapper script is used.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* javac.in: Updated to use source 1.6 instead of 1.5.

2008-05-19  Mark Wielaard  <mark@klomp.org>

	* test/jtreg/com/sun/javatest/lib/*.java: Added.
	* .hgignore: Add test/hotspot, test/jdk, test/langtools and
	test/jtreg/classes

2008-05-19  Mark Wielaard  <mark@klomp.org>

	* test/jtreg/*: New jtreg and jtharness sources.
	* Makefile.am (distclean-local): Add clean-jtreg clean-jtreg-reports.
	(.PHONY): Likewise.
	(EXTRA_DIST): Add test/jtreg.
	(stamps/jtreg.stamp): New target.
	(clean-jtreg): Likewise.
	(check-hotspot): Likewise.
	(check-langtools): Likewise.
	(check-jdk): Likewise.
	(clean-jtreg-reports): Likewise.
	(jtregcheck): Likewise.
	(check-local): Likewise.