@@ -1,3 +1,8 @@
+2008-05-26  Lillian Angel  <langel@redhat.com>
+
+	* patches/icedtea-certbundle.patch: Added trustStore and
+	trustStoreType to props.
+
 2008-05-26  Mark Wielaard  <mwielaard@redhat.com>
 
 	* Makefile.am (ICEDTEA_PATCHES): Add
